18586
```scala
scala> def impl(c: Context) = { import c.universe._; q"class C { def apply(x: Int) = x }; new C {}" }
impl: (c: scala.reflect.macros.Context)c.universe.Tree

scala> def foo = macro impl
defined term macro foo: Any

scala> foo
res2: AnyRef{def apply(x: Int): Int} = $anon$1@6b58826e

scala> foo(2)
<console>:32: error: Any does not take parameters
              foo(2)
                 ^
```
